Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-6139

QScriptEngine::uncaughtExceptionBacktrace() doesn't give a full backtrace

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.0.0
    • 4.6.0
    • Qt Script
    • None
    • df0ec196031d33850324dc5eeed2d71f61413885

    Description

      Only the innermost script function call is contained in the backtrace.
      This is a regression from Qt 4.5.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              kenthans Kent Hansen (Inactive)
              kenthans Kent Hansen (Inactive)
              Votes:
              2 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes